-> Bugfix for program tabs on active cohorts -> Disease Code fix for CCLE and TARGET -> Tuning health check frequency -> Improving TCGA and CCLE filter fixes -> Moving build to variables, out of var fave list

--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -197,7 +197,7 @@
         </div>
         <div class="cohort-info panel panel-default">
             <div class="panel-heading">
-                <h4 class="panel-title">Details</h4>
+                <h4 class="panel-title">Program Details</h4>
             </div>
             <div class="panel-body">
                 <div class="row col-md-6">
