--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -178,7 +178,7 @@
         {% else %}
             <div class="cohort-info panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title">Details</h4>
+                    <h4 class="panel-title">Program Details</h4>
                 </div>
                 <div class="panel-body">
                     <div class="row col-md-6">
