-> Data type filters

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -44,3 +44,10 @@
   .panel-body
     margin-bottom: 50px
 
+#variable_edit
+  li.program-tab
+    width: (100% / 5)
+    text-align: center
+    a
+      padding: 10px 9px
+      display: block
