--- a/templates/base.html
+++ b/templates/base.html
@@ -135,6 +135,7 @@
         var warnAfter = {{ request|warn_after|unlocalize }};
         var expireAfter = {{ request|expire_after|unlocalize }};
         var confirmFormDiscard = "{% trans 'You have unsaved changes in a form of this page.' %}";
+        var returnToUrl = '{% url 'landing_page' %}';
     </script>
     {% endlocalize %}
 {% endif %}
