--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -211,8 +211,8 @@
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
-                <a>GENES <i class="fa fa-caret-down"></i></a>
-                <ul class="sub-menu drop">
+                <a>GENES & miRNAs <i class="fa fa-caret-down"></i></a>
+                <ul class="sub-menu drop genes-mirnas">
                     {% if user.genefavorite_set.all|active|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
@@ -243,9 +243,9 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene Favorite ( {{ user.genefavorite_set.all|active|length }} )</a></li>
-                    <li class="menu-item"><a href="{% url 'gene_fav_create' %}">Create Gene Favorite(s)</a></li>
-                    <li class="menu-item"><a href="{% url 'gene_select_for_new_workbook' %}">Select Genes for a New Workbook</a></li>
+                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene & miRNA Favorites ( {{ user.genefavorite_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'gene_fav_create' %}">Create Gene & miRNA Favorites</a></li>
+                    <li class="menu-item"><a href="{% url 'gene_select_for_new_workbook' %}">Select Genes & miRNAs for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
