--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -124,9 +124,9 @@
                                 <li class="list-item">
                                     <div class="list-item__heading">
                                         {% if workbook.owner.id == request.user.id %}
-                                        <a href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Genes <i class="fa fa-plus pull-right"></i></a>
+                                        <a href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Genes & miRNAs <i class="fa fa-plus pull-right"></i></a>
                                         {% else %}
-                                        <span>Genes </span>
+                                        <span>Genes & miRNAs </span>
                                         {% endif %}
                                     </div>
                                     {% if worksheet.worksheet_gene_set.count > 0 %}
@@ -141,7 +141,7 @@
                                                             <form action="{% url 'worksheet_gene_delete' workbook_id=workbook.id worksheet_id=worksheet.id gene_id=gene.id %}" method="POST">
                                                                 {% csrf_token %}
                                                                 {% if workbook.owner.id == user.id %}
-                                                                    <button type="submit" class="text-danger workbook-remove-item" aria-label="Remove Gene"><i class="fa fa-close"></i></button>
+                                                                    <button type="submit" class="text-danger workbook-remove-item" aria-label="Remove Gene or miRNA"><i class="fa fa-close"></i></button>
                                                                 {% endif %}
                                                                 {{ gene.gene }}
                                                             </form>
