--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -144,7 +144,7 @@
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <a href="{% url 'genes' %}">Gene Favorites ({{ user.genefavorite_set.all|active|length }})</a></h3>
+                        <a href="{% url 'genes' %}">Gene & miRNA Favorites ({{ user.genefavorite_set.all|active|length }})</a></h3>
                 </div>
                 <div class="panel-body">
                     {% if user.genefavorite_set.all|active|length > 0 %}
