--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -95,6 +95,10 @@
                                                 {% endfor %}
                                             {% endif %}
                                         </select>
+                                    {% empty %}
+                                        <select id="placeholder-{{ type.datatype }}" class="form-control field-options placeholder-options" data-field="placeholder" disabled style="display: none;">
+                                             <option value="placeholder" disabled selected type="label">placeholder</option>
+                                        </select>
                                     {% endfor %}
                                 </div>
                                 <div class="search-term feature-search space-top-15">
@@ -162,6 +166,10 @@
                                     <select id="search-term-select-y" class="search-term-field search-term-select form-control"></select>
                                 </div>
                             </div>
+                        {% empty %}
+                            <select id="placeholder-{{ type.datatype }}" class="form-control field-options placeholder-options" data-field="placeholder" disabled style="display: none;">
+                                 <option value="placeholder" disabled selected type="label">placeholder</option>
+                            </select>
                         {% endfor %}
                         <label for="y-log-transform">
                             <input id="y-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(n+1)
